--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "damo": "./bin/cli"
   },
   "dependencies": {
-    "damo-cli-extract-plugin": "lastest",
-    "damo-cli-l20n-loader": "lastest",
-    "damo-cli-html-plugin": "lastest",
-    "damo-cli-docco-plugin": "lastest",
-
+    "damo-cli-extract-plugin": "latest",
+    "damo-cli-l20n-loader": "latest",
+    "damo-cli-html-plugin": "latest",
+    "damo-cli-docco-plugin": "latest",
     "assets-webpack-plugin": "~3.5.1",
     "babel-core": "~6.13.2",
     "babel-loader": "~6.4.1",
@@ -29,7 +28,7 @@
     "babel-plugin-transform-decorators-legacy": "~1.3.4",
     "babel-plugin-transform-object-rest-spread": "~6.19.0",
     "babel-plugin-transform-runtime": "~6.12.0",
-    "babel-preset-es2015": "~6.13.2",
+    "babel-preset-env": "~1.6.0",
     "babel-preset-react": "~6.11.1",
     "babel-preset-stage-0": "~6.5.0",
     "commander": "~2.9.0",
