--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "damo": "./bin/cli"
   },
   "dependencies": {
-    "damo-cli-extract-plugin": "latest",
-    "damo-cli-l20n-loader": "latest",
-    "damo-cli-html-plugin": "latest",
-    "damo-cli-docco-plugin": "latest",
     "assets-webpack-plugin": "~3.5.1",
     "babel-core": "~6.13.2",
     "babel-loader": "~6.4.1",
@@ -29,10 +25,16 @@
     "babel-plugin-transform-object-rest-spread": "~6.19.0",
     "babel-plugin-transform-runtime": "~6.12.0",
     "babel-preset-env": "~1.6.0",
+    "babel-preset-es2015": "~6.13.2",
     "babel-preset-react": "~6.11.1",
+    "babel-preset-latest": "~6.24.1",
     "babel-preset-stage-0": "~6.5.0",
     "commander": "~2.9.0",
     "css-loader": "~0.9.1",
+    "damo-cli-docco-plugin": "latest",
+    "damo-cli-extract-plugin": "latest",
+    "damo-cli-html-plugin": "latest",
+    "damo-cli-l20n-loader": "0.0.3",
     "exports-loader": "~0.6.2",
     "expose-loader": "~0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -64,6 +66,10 @@
     "webpack-core": "~0.6.0",
     "webpack-dev-server": "~1.14.1",
     "webpack-stats-plugin": "~0.1.1"
+  },
+  "devDependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "homepage": "https://github.com/damo-team/cli",
   "repository": {
