--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "babel-plugin-transform-runtime": "~6.12.0",
     "babel-preset-env": "~1.6.0",
     "babel-preset-es2015": "~6.13.2",
-    "babel-preset-react": "~6.11.1",
     "babel-preset-latest": "~6.24.1",
+    "babel-preset-react": "~6.11.1",
     "babel-preset-stage-0": "~6.5.0",
     "commander": "~2.9.0",
     "css-loader": "~0.9.1",
@@ -49,6 +49,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.1",
     "lodash": "~3.10.1",
+    "ncp": "^2.0.0",
     "ng-annotate-webpack-plugin": "~0.1.2",
     "ngmin-webpack-plugin": "^0.1.3",
     "node-libs-browser": "~0.5.2",
