--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.8",
+  "version": "0.0.9",
   "name": "damo-cli",
   "author": {
     "name": "baqian <st403471258@gmail.com>"
@@ -35,6 +35,7 @@
     "damo-cli-extract-plugin": "latest",
     "damo-cli-html-plugin": "latest",
     "damo-cli-l20n-loader": "0.0.3",
+    "damo-core": "^0.1.6",
     "exports-loader": "~0.6.2",
     "expose-loader": "~0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
